add(2): add file about variable

--- a/index_variable.html
+++ b/index_variable.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <button>Click me</button>
+    <script src="script_var.js"></script>
   </body>
 </html>
